--- a/slides/references.bib
+++ b/slides/references.bib
@@ -544,3 +544,28 @@ url = {https://permalink.obvsg.at/wuw/AC15200792},
   month = jan,
   pages = {1}
 }
+
+@article{tobler1970,
+  title = {A Computer Movie Simulating Urban Growth in the Detroit Region},
+  volume = {46},
+  ISSN = {0013-0095},
+  url = {http://dx.doi.org/10.2307/143141},
+  DOI = {10.2307/143141},
+  journal = {Economic Geography},
+  publisher = {JSTOR},
+  author = {Tobler,  W. R.},
+  year = {1970},
+  month = jun,
+  pages = {234}
+}
+
+@BOOK{stock2019,
+  title     = "Introduction to econometrics, global edition",
+  author    = "Stock, James and Watson, Mark W",
+  publisher = "Pearson Education",
+  edition   =  4,
+  month     =  may,
+  year      =  2019,
+  address   = "London, England",
+  language  = "en"
+}
