add second part of module 2

--- a/slides/references.bib
+++ b/slides/references.bib
@@ -569,3 +569,55 @@ url = {https://permalink.obvsg.at/wuw/AC15200792},
   address   = "London, England",
   language  = "en"
 }
+
+@misc{grandjean2013,
+  author       = {Grandjean, Martin},
+  title        = {Social Network Analysis Visualization [Image]},
+  howpublished = {Wikimedia Commons},
+  year         = {2013},
+  note         = {\url{https://commons.wikimedia.org/wiki/File:Social_Network_Analysis_Visualization.png}},
+  url          = {https://upload.wikimedia.org/wikipedia/commons/??/??/Social_Network_Analysis_Visualization.png},
+  license      = {Creative Commons Attribution-Share Alike 3.0 Unported (CC BY-SA 3.0)},
+  organization = {Wikimedia Commons}
+}
+
+@article{giraffael2024,
+  author       = {Giraffael},
+  title        = {Social Network Analysis on My Instagram Connections Graph},
+  journal      = {Medium},
+  year         = {2024},
+  month        = {Mar 12},
+  url          = {https://medium.com/@girraffael/network-statistical-analysis-on-my-instagram-connections-graph-c5ca91062d47},
+  note         = {Online; 7 min read},
+  publisher    = {Medium}
+}
+
+@article{manski1993,
+  title = {Identification of Endogenous Social Effects: The Reflection Problem},
+  volume = {60},
+  ISSN = {0034-6527},
+  url = {http://dx.doi.org/10.2307/2298123},
+  DOI = {10.2307/2298123},
+  number = {3},
+  journal = {The Review of Economic Studies},
+  publisher = {Oxford University Press (OUP)},
+  author = {Manski,  Charles F.},
+  year = {1993},
+  month = jul,
+  pages = {531}
+}
+
+@article{conley1999,
+  title = {GMM estimation with cross sectional dependence},
+  volume = {92},
+  ISSN = {0304-4076},
+  url = {http://dx.doi.org/10.1016/S0304-4076(98)00084-0},
+  DOI = {10.1016/s0304-4076(98)00084-0},
+  number = {1},
+  journal = {Journal of Econometrics},
+  publisher = {Elsevier BV},
+  author = {Conley,  T.G.},
+  year = {1999},
+  month = sep,
+  pages = {1–45}
+}
