--- a/slides/references.bib
+++ b/slides/references.bib
@@ -621,3 +621,103 @@ url = {https://permalink.obvsg.at/wuw/AC15200792},
   month = sep,
   pages = {1–45}
 }
+
+@article{card1990,
+  author  = {Card, David},
+  title   = {The Impact of the Mariel Boatlift on the Miami Labor Market},
+  journal = {Industrial and Labor Relations Review},
+  year    = {1990},
+  volume  = {43},
+  number  = {2},
+  pages   = {245--257}
+}
+
+@article{urquiola2006,
+  author  = {Urquiola, Miguel},
+  title   = {Identifying Class Size Effects in Developing Countries: Evidence from Rural Bolivia},
+  journal = {Review of Economics and Statistics},
+  year    = {2006},
+  volume  = {88},
+  number  = {1},
+  pages   = {171--177}
+}
+
+@article{angrist1999,
+  author  = {Angrist, Joshua D. and Lavy, Victor},
+  title   = {Using Maimonides' Rule to Estimate the Effect of Class Size on Scholastic Achievement},
+  journal = {Quarterly Journal of Economics},
+  year    = {1999},
+  volume  = {114},
+  number  = {2},
+  pages   = {533--575}
+}
+
+@article{mcclellan1994,
+  author  = {McClellan, Mark and McNeil, Barbara J. and Newhouse, Joseph P.},
+  title   = {Does More Intensive Treatment of Acute Myocardial Infarction in the Elderly Reduce Mortality? Analysis Using Instrumental Variables},
+  journal = {Journal of the American Medical Association},
+  year    = {1994},
+  volume  = {272},
+  number  = {11},
+  pages   = {859--866}
+}
+
+@article{miller2021,
+  title = {Medicaid and Mortality: New Evidence From Linked Survey and Administrative Data},
+  volume = {136},
+  ISSN = {1531-4650},
+  url = {http://dx.doi.org/10.1093/qje/qjab004},
+  DOI = {10.1093/qje/qjab004},
+  number = {3},
+  journal = {The Quarterly Journal of Economics},
+  publisher = {Oxford University Press (OUP)},
+  author = {Miller,  Sarah and Johnson,  Norman and Wherry,  Laura R},
+  year = {2021},
+  month = jan,
+  pages = {1783–1829}
+}
+
+@article{goodmanbacon2021,
+  title = {Difference-in-differences with variation in treatment timing},
+  volume = {225},
+  ISSN = {0304-4076},
+  url = {http://dx.doi.org/10.1016/j.jeconom.2021.03.014},
+  DOI = {10.1016/j.jeconom.2021.03.014},
+  number = {2},
+  journal = {Journal of Econometrics},
+  publisher = {Elsevier BV},
+  author = {Goodman-Bacon,  Andrew},
+  year = {2021},
+  month = dec,
+  pages = {254–277}
+}
+
+@article{dechaisemartin2020,
+  title = {Two-Way Fixed Effects Estimators with Heterogeneous Treatment Effects},
+  volume = {110},
+  ISSN = {0002-8282},
+  url = {http://dx.doi.org/10.1257/aer.20181169},
+  DOI = {10.1257/aer.20181169},
+  number = {9},
+  journal = {American Economic Review},
+  publisher = {American Economic Association},
+  author = {de Chaisemartin,  Clément and D’Haultfœuille,  Xavier},
+  year = {2020},
+  month = sep,
+  pages = {2964–2996}
+}
+
+@article{callaway2021,
+  title = {Difference-in-Differences with multiple time periods},
+  volume = {225},
+  ISSN = {0304-4076},
+  url = {http://dx.doi.org/10.1016/j.jeconom.2020.12.001},
+  DOI = {10.1016/j.jeconom.2020.12.001},
+  number = {2},
+  journal = {Journal of Econometrics},
+  publisher = {Elsevier BV},
+  author = {Callaway,  Brantly and Sant’Anna,  Pedro H.C.},
+  year = {2021},
+  month = dec,
+  pages = {200–230}
+}
