--- a/slides/2_panel.qmd
+++ b/slides/2_panel.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 2: Panel Data and Further Issues"
-subtitle: "Econometrics II"
+subtitle: "Applied Econometrics · Econometrics III"
 author:
 - "Max Heinze ([mheinze@wu.ac.at](mailto:mheinze@wu.ac.at))"
 - "Sannah Tijani ([stijani@wu.ac.at](mailto:stijani@wu.ac.at))"
@@ -57,11 +57,679 @@ font_family <- "Inter"
 
 <!-- Maybe split here between Sannah and Max? For basics I would follow Stock and Watson (and Cunningham), for DiD/ES I would follow Cunningham -->
 
-# Diff-in-Diff
+# Quasi-Experiments
+
+## What is a Quasi-Experiment?
+
+. . .
+
+From your classes in **Econometrics I** and **Econometrics II**, you know what an [**experiment**]{.col2} is and that experiments allow us to use some very convenient methods and estimators. You may also have heard of [**quasi-experiments**]{.col1}, but we are going to revisit them anyway.
+
+:::{.incremental}
+- In an [**experiment**]{.col2}, we are able to **randomly assign treatment**. This means that we can divide our sample (randomly) into a treatment group and a control group, and then compare outcomes between them.
+- In a [**natural experiment**]{.col1}, we make use of circumstances (either induced by nature, or in some instances by other humans) that exogenously divide subjects into treatment and control groups in a way that makes it seem **as if they were randomly allocated**.
+- Other [**quasi-experimental designs**]{.col1} include regression discontinuity designs, event studies, or synthetic control methods.
+:::
+
+. . .
+
+We are first going to look at [**natural experiments**]{.col1}.
+
+## Natural Experiments
+
+. . .
+
+::::{.columns}
+:::{.column width="60%"}
+
+:vspace1
+
+A [**natural experiment**]{.col1} is a study where an **experimental setting** is **induced by nature** or other factors outside our control.
+
+:::{.incremental}
+- It is an **observational study** with properties of randomised experiments.
+- This provides a good basis for **causal inference**, and
+- does not suffer from **potential issues** of a conducting an experiment, such as cost, ethics, feasibility, etc.
+- For a natural experiment, we need something to **happen exogenously** and **create variation in treatment**.
+:::
+:::
+:::{.column width="40%" .col0}
+
+:vspace2
+
+![](figures/draft.jpg){width=100%}
+
+U.S. Representative Alexander Pirnie of New York drawing the first capsule in the Vietnam war draft lottery.
+
+:::
+::::
+
+
+## Cholera
+
+. . .
+
+In the 1800s, London (as well as many other places) was repeatedly hit by waves of a **cholera epidemic**.
+
+:::{.incremental}
+- The predominant theory at the time was that the disease was spread by small **inanimate particles** that floated through the air (which is obviously incorrect).
+- **John Snow** was a physician working in London at the time, and he suspected instead that cholera was caused by **microscopic living organisms** that entered the body through water and food, multiplied in the body, and then exited the body through urine and feces.
+- This would imply that **clean water supply** was a way to slow the spread of the disease.
+- Unfortunately, he was only able to collect **anecdotal evidence**, which did not allow him to make a causal claim. 
+:::
+
+. . .
+
+Of course, running **an experiment** is infeasible in this context. It would requre randomizing households, and allocating clean water to only a subset of them. This was both logistically infeasible and ethically questionable.
+
+## A Natural Experiment
+
+. . .
+
+In 1849, the following happened:
+
+:::{.centering .fragment}
+![](drawio_charts/2_cholera.svg){.noinvert width=80%}
+:::
+
+. . .
+
+One water company **moved its pipes** further upstream, to a location that incidentally was upstream of the **main sewage discharge facility**. Suddenly, **households in the same neighborhoods** had access to **different qualities of water**.
+
+## A Natural Experiment
+
+::::{.columns .fragment}
+:::{.column width="70%" .incremental}
+There were a few other factors that made this situation a **natural experiment**:
+
+- Water companies were not serving disjoint geographical areas. Their networks intersected and often houses in the same street were chaotically served by pipes from different companies.
+- John Snow collected extensive additional data and compared characteristics of treatment and control households to confirm their comparability. 
+- Most crucially, the change in water supply happened for other reasons and thus induced **exogenous variation**.
+:::
+:::{.column width="30%" .col0}
+
+:vspace1
+
+![](figures/snow.jpg){width=100%}
+Photograph by @hisgett2015.
+:::
+::::
+
+. . .
+
+In the end, John Snow collected very convincing evidence for his theory and went on to identify a certain contaminated water pump. The theory, however, was deemed politically unpleasant and was thus not accepted until long after Snow's death.
+
+## Other Examples for Quasi-Experiments
+
+. . .
+
+The following three [**examples**]{.col1} for quasi-experimental research designs are taken from @stock2019:
+
+:::{.incremental}
+- To find out whether **immigration** reduces **wages**, we would ideally run an experiment where we randomize the number of immigrants to different municipalities. Of course, this is infeasible. @card1990 used a temporary lifting of restrictions on immigration from Cuba to the U.S., which led to the Mariel boatlift, as a natural experiment. He found no effect of this exogenous influx of immigrants on wages.
+- @urquiola2006 analyzed the effect of **class size** on **educational achievement**. This is tricky because students with more favorable socioeconomic backgrounds may tend to enroll in schools with smaller classes. He made use of a particular regulatory discontinuity in Bolivia: There, schools could obtain funding for an additional teacher if there were more than 30 students in a certain grade. The identifying assumption is that grades with just below 30 students should not be systematically different from those with just above 30 students. He found that smaller classes led to much better outcomes.
+:::
+
+## The Differences Estimator
+
+. . .
+
+Before we start discussing **natural experiments**, let us actually start by looking at probably the simplest estimator for a treatment effect we will ever encounter. The **differences estimator** can be used in [**experimental settings**]{.col1} and can be computed like this:
+
+$$
+y_{i} = \beta_0 + D_i\beta_1 + u_i,
+$$
+
+where $D_i$ is the treatment indicator.
+
+:vspace1
+
+. . .
+
+If $X$ is truly randomly assigned, then $\mathrm{E}(u_i\mid X_i)=0$, and the **OLS estimator** of rhe causal effect $\beta_1$ is **unbiased and consistent**.
+
+:vspace1
+
+. . .
+
+We are discussing this estimator not only because we can use it when we run an experiment, but also because what we discuss next is based on it.
+
+## Two Groups Observed Twice {auto-animate="true"}
+
+. . .
+
+In **natural experiment settings**, as long as we have **data on both groups** from both **before the intervention** and **after the intervention**, we can use the [**difference-in-differences**]{.col1} ([**DiD**]{.col1}) estimator. This is a very convenient and simple approach.
+
+:vspace1
+
+. . .
+
+We start by collecting data for the following four subsets of our dataset:
+
+:::{.div}
+|                | Before        | After                           |
+|----------------|---------------|---------------------------------|
+| Control        | $\dots$   | $\dots$               |
+| Treatment      | $\dots$ | $\dots$ |
+:::
+
+:vspace1
+
+. . .
+
+That is, we compute averages for the treatment group and the control group, both for the before-intervention period and the post-intervention period. Alternatively, we can write this down as follows using three dummies:
+
+$$
+y_{i t} = \alpha + \text{after}\: \phi + \text{treated} \: \theta + \text{after}\times\text{treated}\: \delta + u_{it}
+$$
+
+## The Difference-in-Differences Estimator {auto-animate="true"}
+
+$$
+y_{i t} = \alpha + \text{after}\: \phi + \text{treated} \: \theta + \text{after}\times\text{treated}\: \delta + u_{it}
+$$
+
+. . .
+
+We can use the coefficients to express the averages in the table from before:
+
+:::{.div}
+|                | Before        | After                           | **Difference** |
+|----------------|---------------|---------------------------------|----------------|
+| Control        | $\alpha$   | $\alpha + \phi$               | $\phi$       |
+| Treatment      | $\alpha + \theta$ | $\alpha + \theta + \phi + \delta$ | $\phi + \delta$ |
+| **Difference** | $\theta$    | $\theta + \delta$             | $\delta$     |
+:::
+
+. . .
+
+We also added [**differences**]{.col1} to the table. Let us look at the **difference column**. $\phi$ expresses by how much the average in the control group changed from before to after treatment. Analogously, $\phi+\delta$ is the change for the treatment group.
+
+. . .
+
+The **difference between them**, $\delta$, **represents the average treatment effect** (as long as group allocation is as good as random). We can obtain its estimate $\hat{\delta}$ in an extremely easy way just by comparing the averages in this way.
+
+
+
+## Diff-in-Diff Illustration
+
+::::{.columns}
+:::{.column width=65%}
+
+:vspace3
+
+:::{.centering .fragment}
+![](figures/2_did.svg){width=100%}
+:::
+:::
+:::{.column width="35%"}
+
+:vspace1
+
+[This illustration shows one important **implicit assumption** we make when comparing **differences of differences**.]{.fragment}
+
+:vspace0.5
+
+[The two groups are assumed to follow **parallel trends** before the treatment is applied. Without the treatment, they would have continued in parallel, but the treatment makes the difference between the two lines change.]{.fragment}
+:::
+::::
+
+<!--
+\documentclass{article}
+\usepackage{tikz}
+\usepackage{tikz-3dplot}
+\usetikzlibrary{math}
+\usepackage[active,tightpage]{preview}
+\PreviewEnvironment{tikzpicture}
+\setlength\PreviewBorder{0.125pt}
+\usetikzlibrary{decorations.pathreplacing}
+
+\begin{document}
+\begin{tikzpicture}[scale=0.8]
+
+% Colors
+\definecolor{primary}{HTML}{74B83D}
+\definecolor{secondary}{HTML}{4072C2}
+
+% Lines
+\draw[black, thick] (0,-0.2) -- (0,4.5);
+\draw[secondary, very thick] (-4,0.6) -- (4,2.0);
+\draw[primary, very thick] (-4,1.4) -- (0,2.2) -- (4,4.0);
+\draw[primary, very thick, dashed] (0,2.2) -- (4,3.0);
+
+
+% Braces
+\draw[decorate, thick, decoration={brace, amplitude=3pt}]
+(-4.1,0.6) -- (-4.1,1.4)
+node[midway, left=6pt] {};
+
+\draw[decorate, thick, decoration={brace, amplitude=3pt}]
+(4.1,4.0) -- (4.1,3.0)
+node[midway, right=6pt] {};
+
+% Labels
+\node[rotate=90] at (-4.8,2.0) {Outcome differences};
+\node[rotate=90] at (5.2,3.6) {Intervention effect};
+
+\end{tikzpicture}
+
+\end{document}
+-->
+
+## The DiD Estimator With Additional Regressors
+
+. . . 
+
+Alternatively, we can write the regression equation for the difference-in-differences estimator for a given observarion $i$ like this, using first differences:
+
+$$
+\Delta y = \beta_0 + D_i\beta_1 + u_i,
+$$
+
+where $D_i$ is the treatment group indicator and $\Delta y_i$ is the difference in outcomes for individual $i$ between the pre- and the post-treatment period. The **OLS estimator** for $\beta_1$ in this equation is the **DiD estimator**.
+
+:vspace2
+
+. . .
+
+What if we want to include **additional covariates**? Easy:
+
+$$
+\Delta y = \beta_0 + D_i\beta_1 + \boldsymbol{x}_i'\boldsymbol{\gamma}  + u_i,
+$$
+
+with additional variables stored in the vector $\boldsymbol{x}_i$.
+
+
+
+## DiD Using Repeated Cross-Sections
+
+. . .
+
+What happens when we **do not have a true panel**, but only **repeated cross-sections**? [**We can still use the DiD estimator.**]{.col1 .fragment}
+
+:::{.incremental}
+- If individuals are randomly drawn in both periods, then we can use individuals from the first period as surrogates for the treated and non-treated individuals in the second period.
+- Identification does not rely on **following the same individual**, but on **assuming parallel trends** for the two [**groups**]{.col1}.
+:::
+
+. . .
+
+Instead of using the convenient first-difference notation, $\Delta y = \beta_0 + D_i\beta_1 + u_i$, we have to resort to specifying the model in full, but conceptually nothing changes:
+
+$$
+y_{it} = \beta_0 + D_{it}\beta_1 + T_{it}\beta_2+P_{it}\beta_3 + \boldsymbol{x}_i'\boldsymbol{\gamma},
+$$
+
+where $D_{it}$ is the treatment indicator as before. It is an interaction of the indicator for being in the (surrogate or actual) treatment group, $T_{it}$; and the indicator for being in the post-treatment time period, $P_{it}$.
+
+
+
+## IV Estimation in DiD Settings
+
+. . .
+
+Consider the following case: 
+
+:::{.incremental}
+- A **quasi-experiment** yields some variable $Z_i$, and 
+- this variable $Z_i$ influences whether $i$ is treated or not. 
+- In other words, the difference to before is that it is not the treatment directly that is assigned by the quasi-experiment.
+:::
+
+. . .
+
+Then, **if we observe both** $D_i$, the treatment indicator, **and** $Z_i$, [$Z_i$ **is a valid instrument for the treatment** $D_i$]{.col1}.
+
+:vspace1
+
+. . .
+
+This means that we can use the **instrument** to estimate **simple differences**:
+
+$$
+y_{i} = \beta_0 + \hat{D}_i\beta_1 + u_i,
+$$
+
+where $\hat{D}_i$ is the estimated treatment indicator from the first stage.
+
+## Parallel Trends and Event Studies
+
+. . .
+
+We have mentioned before that the most important assumption in a DiD setting is that of **parallel trends**. Of course, since we cannot observe the counterfactual, we can **never observe whether trends would be parallel** post-treatment. [**What can we do instead?**]{.col1}
+
+:::{.incremental}
+- A good first step is to compare pre-treatment trends, e.g. by visualization. But note that three sunny days in a row do not imply sun tomorrow; and neither do parallel past trends imply parallel future trends – at least not without additional assumptions.
+- This is a problem that we are never going to be able to solve. But we can try to make a convincing argument for our assumptions.
+- One way is to **estimate an event study**. An **event study** can be understood as a DiD where pre- and post-treatment periods are not pooled, but instead a separate DiD coefficient is estimated for each period relative to the pre-treatment baseline:
+  $$
+  y_{it} = \beta_0 + \sum_{k\neq -1}\beta_{1k}\bigl(T_i\times P^{(k)}_{it}\bigr) + \boldsymbol{x}_i'\boldsymbol{\gamma} + u_{it},\qquad P^{(k)}_{it}=𝟙\{t-t_0=k\}.
+  $$
+:::
 
 ## Event Studies
 
-## Differential Timing
+. . .
+
+The following is an example of an **event study graph** taken from @miller2021.
+
+::::{.columns}
+:::{.column width="60%" .fragment}
+![](figures/miller.jpg){width="100%"}
+:::
+:::{.column width="40%"}
+[Their study is about the relationship between enrollment in **Medicare**, a U.S. health program for senior citizens, and **mortality**.]{.fragment}
+
+[Pre-treatment coefficients are close to zero – this can be seen as an **indication of parallel trends**.]{.fragment}
+
+[**After the treatment**, the difference between the differences becomes negative: Enrolled individuals' mortality is lower.]{.fragment}
+:::
+::::
+
+## Staggered Treatment
+
+. . .
+
+When we discussed the **DiD** estimator, we have so far assumed that all units are treated at exactly the same time. That may not always be the case, however. When treatment is staggered, we often times use the **TWFE estimator**, which we got using this equation:
+
+$$
+y_{it} = \mu + \delta D_{it} + \varphi_i+\lambda_t+u_{it}.
+$$
+
+:::{.incremental}
+- @goodmanbacon2021 shows that the TWFE estimator can be **decomposed into** a weighted average of all potential $2\times 2$ **DiD estimates**. These include comparisons of treated and never-treated units, but also between late and early treated units.
+- The comparison between units treated at different times is **problematic when treatment effects vary with time**, because this can introduce **bias**.
+- Also, weights depend on cohort sizes and treatment variance (which is largest when groups are treated after exactly half the time).
+- @callaway2021 provide an alternative estimation strategy for cohort- and time-specific ATT, which can then be aggregated.
+:::
+
+## Regression Discontinuity
+
+::::{.columns}
+:::{.column width="62%" .fragment}
+```{r}
+#| fig-width: 8
+#| fig-height: 6.5
+#| warning: false
+#| message: false
+library(plotly)
+
+style_plotly_scale <- function(p, scale = 1.5, family = "Inter, sans-serif") {
+  sz <- list(
+    base   = 14 * scale,
+    title  = 16 * scale,
+    tick   = 12 * scale,
+    annot  = 16 * scale,
+    legend = 12 * scale,
+    hover  = 12 * scale
+  )
+  p |>
+    layout(
+      font = list(family = family, size = sz$base),
+      title = list(font = list(family = family, size = sz$title)),
+      xaxis = list(tickfont = list(family = family, size = sz$tick)),
+      yaxis = list(tickfont = list(family = family, size = sz$tick)),
+      legend = list(font = list(family = family, size = sz$legend)),
+      hoverlabel = list(font = list(family = family, size = sz$hover)),
+      uniformtext = list(minsize = sz$base, mode = "show")
+    )
+}
+
+set.seed(42)
+N <- 100
+x <- rnorm(N)
+y <- x * 0.25 + 0.5 * as.integer(x >= 0) + rnorm(N, sd = 0.1)
+
+# Fit models
+mdl_all <- lm(y ~ x)
+mdl_left <- lm(y[x < 0] ~ x[x < 0])
+mdl_right <- lm(y[x >= 0] ~ x[x >= 0])
+
+# Create line data
+x_range <- seq(min(x), max(x), length.out = 200)
+y_all <- coef(mdl_all)[1] + x_range * coef(mdl_all)[2]
+
+x_left <- x_range[x_range < 0]
+y_left <- coef(mdl_left)[1] + x_left * coef(mdl_left)[2]
+
+x_right <- x_range[x_range >= 0]
+y_right <- coef(mdl_right)[1] + x_right * coef(mdl_right)[2]
+
+xr <- c(min(x) - 0.2, max(x) + 0.2)
+yr <- c(min(y) - 0.1, max(y) + 0.1)
+
+p <- plot_ly() |>
+  # Points
+  add_markers(x = x, y = y, 
+              marker = list(size = 8, symbol = "circle",
+                            color = "rgba(120,120,120,0.85)"),
+              hoverinfo = "x+y", name = "Data") |>
+  # Overall regression (dashed gray)
+  add_lines(x = x_range, y = y_all,
+            line = list(color = "darkgray", width = 3, dash = "dash"),
+            hoverinfo = "name", name = "Overall fit") |>
+  # Left segment
+  add_lines(x = x_left, y = y_left,
+            line = list(color = "#74b83d", width = 5),
+            hoverinfo = "name", name = "Below cutoff") |>
+  # Right segment
+  add_lines(x = x_right, y = y_right,
+            line = list(color = "#4072c2", width = 5),
+            hoverinfo = "name", name = "Above cutoff") |>
+  layout(
+    showlegend = FALSE,
+    xaxis = list(range = xr, zeroline = FALSE,
+                 showgrid = FALSE, title = "Running Variable"),
+    yaxis = list(range = yr, zeroline = FALSE,
+                 showgrid = FALSE, title = "Outcome",
+                 linecolor = "darkgray", linewidth = 1),
+    shapes = list(
+      # Vertical line at cutoff
+      list(type = "line", x0 = 0, x1 = 0, y0 = yr[1], y1 = yr[2],
+           line = list(color = "darkgray", width = 1))
+    ),
+    annotations = list(
+      list(x = 0.1, y = 0.2, xref = "x", yref = "y",
+           text = "<b>Discontinuity</b>", showarrow = FALSE,
+           xanchor = "left",
+           font = list(size = 22, family = "Inter, sans-serif", color = "darkgray"))
+    ),
+    plot_bgcolor = "white", paper_bgcolor = "white"
+  ) |>
+  style_plotly_scale(scale = 1.6, family = "Inter, sans-serif") |>
+  layout(autosize = FALSE, width = 8*96, height = 6.5*96) |>
+  config(responsive = FALSE)
+
+p
+```
+:::
+:::{.column width="38%"}
+
+:vspace1
+
+[A [**Regression Discontinuity Design**]{.col1} ([**RDD**]{.col1}) is another type of **quasi-experimental design**.]{.fragment}
+
+:vspace1
+
+[We make use of **a sharp cutoff** in some **runnning variable** and compare values immediately below and immediately above the cutoff.]{.fragment}
+
+:vspace1
+
+[The **size** of the **discontinuity in outcomes** gives us the [**local treatment effect**]{.col1}.]{.fragment}
+:::
+::::
+
+## How to Find a Discontinuity Setting?
+
+. . .
+
+One frequently used setting for a regression discontinuity design is something where a certain **test score** is **required** for e.g. being admitted to a university.
+
+:::{.incremental}
+- Students that receive **just the required test score**, **or slightly more**, are allowed to, e.g., pursue a degree at the university. This will in turn affect their later job market outcomes, along with a bunch of other things.
+- Students whose **score is just below the threshold** should not be systematically dissimilar to those who reached the threshold. But they are denied (in this example case) university education. 
+:::
+
+::::{.columns}
+:::{.column width="50%" .fragment}
+Another frequently used design makes use of **close elections**. Imagine two candidates run for office and the result is close to 50-50. Then, their districts are probably similar and different only in who governs them after the election. 
+:::
+:::{.column width="50%" .fragment}
+:::{.callout-tip title="Think"}
+Can you think of more examples where discontinuities arise naturally?
+:::
+:::
+::::
+
+## Sharp and Fuzzy RDD
+
+. . .
+
+There are two ways in which a discontinuity can affect treatment.
+
+:::{.incremental}
+- In a [**sharp regression discontinuity design**]{.col1}, whether someone is treated depends precisely, and only, on whether that individual **crosses the threshold**. In the standardized test score example, this would mean that everyone that clears the threshold must attend university, and no one below the threshold attends university, period. In this case, estimation of the treatment effect is simple:
+  $$
+  y_i = \beta_0 + D_{i}\beta_1 + x_i\beta_2 + u_i,
+  $$
+  where $D_i$ is the treatment indicator and $x_i$ is the running variable.
+- In a [**fuzzy regression discontinuity design**]{.col2}, clearing the threshold **influences treatment**, but is not the only factor. For example, some students that were successful in the exam may still choose not to attend university; and some students below the threshold may get in via a retake. In this case, the threshold-crossing indicator is correlated with the error term. But if we observe actual treatment, we can use it as an **instrument for the actual treatment** and obtain an estimate for $\beta_1$ by IV estimation. 
+:::
+
+## Requirements for an RDD
+
+. . .
+
+For an [**ideal RDD**]{.col1}, we need a few things:
+
+:::{.incremental}
+- All **other relevant variables** should be continuous at the cutoff, meaning that **they** do not jump.
+- There needs to be **randomness** in the assignment around the cutoff. People just below and just above the threshold should be otherwise comparable.
+- We also need to model the **functional form** (i.e., of the relationship between the running variable and the outcome) correctly.
+:::
+
+. . .
+
+In practice, these requirements are [**hard to check**]{.col2}.
+
+:::{.incremental}
+- Effects are often **contaminated** by other factors, as cutoffs often trigger multiple things simultaneously.
+- We (obviously) never truly know the **functional form**.
+- Treatment assignment can sometimes be **manipulated**. Think of us giving you a half-point you don't deserve in the exam to make you get the better grade.
+:::
+
+## Look, I've Found a Discontinuity
+
+::::{.columns}
+:::{.column width="62%" .fragment}
+```{r}
+#| fig-width: 8
+#| fig-height: 6.5
+#| warning: false
+#| message: false
+library(plotly)
+style_plotly_scale <- function(p, scale = 1.5, family = "Inter, sans-serif") {
+  sz <- list(
+    base   = 14 * scale,
+    title  = 16 * scale,
+    tick   = 12 * scale,
+    annot  = 16 * scale,
+    legend = 12 * scale,
+    hover  = 12 * scale
+  )
+  p |>
+    layout(
+      font = list(family = family, size = sz$base),
+      title = list(font = list(family = family, size = sz$title)),
+      xaxis = list(tickfont = list(family = family, size = sz$tick)),
+      yaxis = list(tickfont = list(family = family, size = sz$tick)),
+      legend = list(font = list(family = family, size = sz$legend)),
+      hoverlabel = list(font = list(family = family, size = sz$hover)),
+      uniformtext = list(minsize = sz$base, mode = "show")
+    )
+}
+set.seed(727)
+N <- 100
+x <- 1 + rnorm(N)
+y <- 2 + x * 0.25 + rnorm(N)
+cutoff <- 1
+# Fit models
+mdl0 <- lm(y ~ x)
+mdl1 <- lm(y[x < cutoff] ~ x[x < cutoff] + I(x[x < cutoff]^2) + I(x[x < cutoff]^3))
+mdl2 <- lm(y[x >= cutoff] ~ x[x >= cutoff] + I(x[x >= cutoff]^2) + I(x[x >= cutoff]^3))
+# Create fitted values
+x_fit <- seq(min(x), max(x), length.out = 500)
+y_fit0 <- coef(mdl0)[1] + x_fit * coef(mdl0)[2]
+y_fit1 <- coef(mdl1)[1] + x_fit * coef(mdl1)[2] + 
+          x_fit^2 * coef(mdl1)[3] + x_fit^3 * coef(mdl1)[4]
+y_fit2 <- coef(mdl2)[1] + x_fit * coef(mdl2)[2] + 
+          x_fit^2 * coef(mdl2)[3] + x_fit^3 * coef(mdl2)[4]
+# Split for plotting
+x_left <- x_fit[x_fit < cutoff]
+y_left <- y_fit1[x_fit < cutoff]
+x_right <- x_fit[x_fit >= cutoff]
+y_right <- y_fit2[x_fit >= cutoff]
+xr <- c(min(x) - 0.2, max(x) + 0.2)
+yr <- c(min(y) - 0.2, max(y) + 0.2)
+p <- plot_ly() |>
+  # Points
+  add_markers(x = x, y = y, 
+              marker = list(size = 8, symbol = "circle",
+                            color = "rgba(120,120,120,0.85)"),
+              hoverinfo = "x+y", name = "Data") |>
+  # Overall regression (dashed gray)
+  add_lines(x = x_fit, y = y_fit0,
+            line = list(color = "darkgray", width = 3, dash = "dash"),
+            hoverinfo = "name", name = "Overall fit") |>
+  # Left polynomial
+  add_lines(x = x_left, y = y_left,
+            line = list(color = "#74b83d", width = 5),
+            hoverinfo = "name", name = "Below cutoff") |>
+  # Right polynomial
+  add_lines(x = x_right, y = y_right,
+            line = list(color = "#4072c2", width = 5),
+            hoverinfo = "name", name = "Above cutoff") |>
+  layout(
+    showlegend = FALSE,
+    xaxis = list(range = xr, zeroline = FALSE,
+                 showgrid = FALSE, title = "Running Variable"),
+    yaxis = list(range = yr, zeroline = FALSE,
+                 showgrid = FALSE, title = "Outcome",
+                 linecolor = "darkgray", linewidth = 1),
+    shapes = list(
+      # Vertical line at cutoff
+      list(type = "line", x0 = cutoff, x1 = cutoff, y0 = yr[1], y1 = yr[2],
+           line = list(color = "darkgray", width = 1))
+    ),
+    annotations = list(
+      list(x = cutoff + 0.1, y = 3, xref = "x", yref = "y",
+           text = "<b>Discontinuity?</b>", showarrow = FALSE,
+           xanchor = "left",
+           font = list(size = 22, family = "Inter, sans-serif", color = "darkgray"))
+    ),
+    plot_bgcolor = "white", paper_bgcolor = "white"
+  ) |>
+  style_plotly_scale(scale = 1.6, family = "Inter, sans-serif") |>
+  layout(autosize = FALSE, width = 8*96, height = 6.5*96) |>
+  config(responsive = FALSE)
+p
+```
+:::
+:::{.column width="38%"}
+
+:vspace2
+
+[A common problem is “fabricating” a discontinuity by **overfitting** the data to both sides of the cutoff.]{.fragment}
+
+:vspace2
+
+[In the example on the left, there is obviously no discontinuity – yet we can fit something that makes one appear.]{.fragment}
+:::
+::::
+
+
+
 
 # Networks and Peers
 
